@@ -1,4 +1,4 @@
-package com.ecommerce.api_gateway.security;
+package com.ecommerce.order_service.security;
 
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.ExpiredJwtException;
@@ -7,6 +7,8 @@ import io.jsonwebtoken.MalformedJwtException;
 import io.jsonwebtoken.UnsupportedJwtException;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
@@ -14,7 +16,7 @@ import org.springframework.stereotype.Component;
 
 import javax.crypto.SecretKey;
 import java.security.Key;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -24,17 +26,25 @@ public class JwtService {
     private static final Logger log = LoggerFactory.getLogger(JwtService.class);
 
     private final String jwtSecret;
+    private final String jwtCookieName;
 
-    public JwtService(@Value("${spring.app.jwtSecret}") String jwtSecret) {
+    public JwtService(@Value("${spring.app.jwtSecret}") String jwtSecret,
+                      @Value("${spring.ecom.app.jwtCookieName:springBootEcom}") String jwtCookieName) {
         this.jwtSecret = jwtSecret;
+        this.jwtCookieName = jwtCookieName;
     }
 
-    public Claims parseClaims(String token) {
-        return Jwts.parser()
-                .verifyWith((SecretKey) getKey())
-                .build()
-                .parseSignedClaims(token)
-                .getPayload();
+    public String resolveToken(HttpServletRequest request) {
+        if (request.getCookies() == null) {
+            return null;
+        }
+        return Arrays.stream(request.getCookies())
+                .filter(Objects::nonNull)
+                .filter(cookie -> jwtCookieName.equals(cookie.getName()))
+                .map(Cookie::getValue)
+                .filter(token -> token != null && !token.isBlank())
+                .findFirst()
+                .orElse(null);
     }
 
     public boolean isTokenValid(String token) {
@@ -45,6 +55,23 @@ public class JwtService {
             log.warn("Invalid JWT token: {}", ex.getMessage());
             return false;
         }
+    }
+
+    public Claims parseClaims(String token) {
+        return Jwts.parser()
+                .verifyWith((SecretKey) getKey())
+                .build()
+                .parseSignedClaims(token)
+                .getPayload();
+    }
+
+    public String extractEmail(Claims claims) {
+        Object email = claims.get("email");
+        return email != null ? email.toString() : null;
+    }
+
+    public String extractUsername(Claims claims) {
+        return claims.getSubject();
     }
 
     public List<String> extractRoles(Claims claims) {
@@ -65,10 +92,8 @@ public class JwtService {
                     .filter(role -> !role.isEmpty())
                     .toList();
         }
-        return Collections.emptyList();
+        return List.of();
     }
-
-
 
     private Key getKey() {
         return Keys.hmacShaKeyFor(Decoders.BASE64.decode(jwtSecret));
